aggiunti commenti e modificato api e finito di implementare endpoint
